AB#85229 Clear adjacent siblings and prevent margin collapse

--- a/packages/forms/src/elements/elements.module.scss
+++ b/packages/forms/src/elements/elements.module.scss
@@ -2,9 +2,15 @@
 
 fieldset {
   padding: 0;
-
-	legend {
+	display: flex;
+	flex-direction: column;
+	
+	> legend {
 		float:left;   //position legend within the fieldset
+
+		+ * {
+			clear: left;
+		}		
 	}
 }
 
